--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ pipelines:
       - step:
           name: Build app
           script:
-            - npm build
+            - npm install
             - npm run build
             - scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r build/ staging@52.66.202.144:/home/staging/
             - ssh staging@52.66.202.144 'bash -s' < deploy.sh
