--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-paginate": "^6.2.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-slick": "^0.23.2",
     "react-test-renderer": "^16.6.3",
     "reactstrap": "^7.0.2",
     "redux": "^4.0.1",
