--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-paginate": "^6.2.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.4.1",
     "react-slick": "^0.23.2",
     "react-test-renderer": "^16.6.3",
     "reactstrap": "^7.0.2",
