--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.4.1",
+    "react-show-more-text": "^1.0.4",
     "react-slick": "^0.23.2",
     "react-test-renderer": "^16.6.3",
     "reactstrap": "^7.0.2",
