bitbucket-pipelines.yml edited online for deployment changes

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,5 +5,5 @@ pipelines:
       - step:
           name: Build app
           script:
-            - ssh sandbox@52.66.202.144 'bash -s' < deploy.sh
+            - ssh sevenvows@13.232.253.171 'bash -s' < deploy.sh
 
