--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "redux-thunk": "2.3.0",
     "resolve-url-loader": "3.0.0",
     "sass-loader": "7.1.0",
+    "sitemap-generator": "8.4.0",
     "style-loader": "0.23.1",
     "uglifyjs-webpack-plugin": "2.0.1",
     "url-loader": "1.1.2",
