--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "lodash-webpack-plugin": "0.11.5",
     "mini-css-extract-plugin": "0.5.0",
     "morgan": "1.9.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -73,7 +73,7 @@
     "prop-types": "15.6.2",
     "query-string": "6.2.0",
     "react": "16.7.0",
-    "react-datepicker": "^2.5.0",
+    "react-datepicker": "2.5.0",
     "react-dev-utils": "6.1.1",
     "react-dom": "16.7.0",
     "react-facebook-login": "4.1.1",
