--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "@babel/register": "7.0.0",
     "@babel/runtime": "7.2.0",
     "autoprefixer": "9.4.2",
-    "axios": "^0.19.0",
+    "axios": "0.19.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
     "babel-plugin-css-modules-transform": "1.6.2",
     "babel-plugin-dynamic-import-node": "2.2.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.3.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "2.4.1",
     "compression": "1.7.3",
