--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
-    "@babel/runtime": "7.2.0",
+    "@babel/runtime": "^7.2.0",
     "autoprefixer": "9.4.2",
     "axios": "0.19.0",
     "babel-eslint": "10.0.1",
