--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-google-login": "5.0.0",
     "react-helmet": "5.2.0",
     "react-image-gallery": "0.8.14",
+    "react-lazyload": "^2.6.2",
     "react-loadable": "5.5.0",
     "react-paginate": "6.2.1",
     "react-redux": "6.0.0",
