--- a/package.json
+++ b/package.json
@@ -134,6 +134,8 @@
     ]
   },
   "devDependencies": {
+    "critters-webpack-plugin": "^2.3.0",
+    "html-webpack-plugin": "^3.2.0",
     "terser-webpack-plugin": "1.2.2",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3"
